# mail_assistant

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml
deploy/: deploy-do-image.sh
entity/: Cargo.toml
entity/src/: auto_cleanup_setting.rs  cleanup_settings.rs  custom_email_rule.rs  default_email_rule_override.rs  email_training.rs  inbox_settings.rs  lib.rs  prelude.rs  processed_daily_summary.rs  processed_email.rs  sea_orm_active_enums.rs  user.rs  user_account_access.rs  user_session.rs  user_settings.rs  user_token_usage_stat.rs  user_token_usage_stats.rs
libs/lib-email-clients/: Cargo.toml
libs/lib-email-clients/src/gmail/: api_quota.rs  (+3 more)
libs/lib-utils/: Cargo.toml
libs/lib-utils/src/: lib.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240930_044500_create_processed_email_ids_table.rs  m20240930_172350_processed_daily_summary.rs  m20240930_180024_user_token_usage.rs  m20241004_190600_user_settings.rs  m20241009_192424_add_training_table.rs  m20241011_180942_add_active_user_session_col.rs  m20241011_195653_add_training_heuristics_col.rs  m20241018_062532_add_inbox_settings.rs  m20241021_013218_add_last_sync_col.rs
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20241101001702_migrate_all_tables/: migration.sql
prisma/migrations/20241101041731_move_last_sync_col/: migration.sql
scripts/: deploy-image.sh
server/: .gitignore  Cargo.toml  Dockerfile  config.example.toml  docker-compose.yml  gmail-colors.txt
server/src/: auth_session_store.rs  cron_time_utils.rs  email_client.rs  error.rs  lib.rs  macros.rs  main.rs  rate_limiters.rs  request_tracing.rs  server_config.rs
server/src/api_quota/: gmail.rs  mod.rs
server/src/auth/: jwt.rs  mod.rs
server/src/db_core/: mod.rs  prelude.rs  queries.rs  test.rs
server/src/email/: active_email_processors.rs  client.rs  daily_summary_mailer.rs  email_template.rs  mod.rs  parsed_message.rs  processor.rs  prompt.rs  rules.rs  tasks.rs
server/src/email/processor/: email_processor.rs  mod.rs  queue.rs
server/src/email_proc/: mod.rs  processor.rs  prompt.rs  tasks.rs
server/src/model/: auto_cleanup_setting.rs  cleanup_settings.rs  custom_email_rule.rs  daily_email_summary.rs  default_email_rule_override.rs  error.rs  inbox_setting.rs  labels.rs  mod.rs  processed_email.rs  response.rs  settings_derivatives.rs  user.rs  user_derivatives.rs  user_inbox_settings.rs  user_settings.rs  user_token_usage.rs
server/src/notify/: mod.rs
server/src/prompt/: converse.rs  groq.rs  mistral.rs  mod.rs  priority_queue.rs
server/src/routes/: account_connection.rs  app_router.rs  auth.rs  mod.rs  watch.rs
server/src/settings/: inbox.rs  inbox_settings.rs  mod.rs  prelude.rs  user.rs
server/src/structs/: error.rs  response.rs
server/src/testing/: common.rs
server/src/testing/data/: jobot_message.json  message_with_divider.json
server/src/tests/: account_connection.rs
supabase/: config.toml
tools/decrypt/: Cargo.toml
tools/gen-key/: Cargo.toml
(+17 files in other folders)
