[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
config = "0.14.0"
google-gmail1 = "5.0.5"
lazy_static = "1.5.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "^1.0"
serde_json = "^1.0"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tower = { version = "0.5.0", features = ["timeout"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["cors", "request-id", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "std"] }
entity = { version = "*", path = "../entity" }
dotenvy = "0.15.7"
chrono = "0.4.38"
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
futures = "0.3.30"
mimalloc = "0.1.43"
mail-parser = "0.9.4"
regex = "1.10.6"
tokenizers = { version = "0.20.0", features = ["http"] }
lettre = "0.11.9"
leaky-bucket = "1.1.2"
minijinja = "2.3.1"

[dependencies.sea-orm]
version = "1.0.0-rc.5"
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    # "sqlx-mysql",
    # "sqlx-sqlite",
]

[features]
mock = ["sea-orm/mock"]

