[package]
name = "server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
config = "0.14.0"
google-gmail1 = "5.0.5"
lazy_static = "1.5.0"
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
tower = { version = "0.5.0", features = ["timeout"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["cors", "request-id", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "std"] }
entity = { version = "*", path = "../entity" }
dotenvy = "0.15.7"
chrono = "0.4.38"
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
futures = "0.3.30"
mimalloc = "0.1.43"
mail-parser = "0.9.4"
regex = "1.10.6"
tokenizers = { version = "0.20.0", features = ["http"] }
lettre = "0.11.9"
leaky-bucket = "1.1.2"
minijinja = "2.3.1"
aws-config = "1.5.8"
aws-sdk-bedrockruntime = "1.53.0"
aws-smithy-runtime-api = "1.7.2"
aws-smithy-types = "1.2.7"
base64 = "0.22.1"
html2text = "0.12.6"
google-cloud-pubsub = "0.29.1"
indexmap = "2.6.0"
tokio-util = "0.7.12"
google-cloud-googleapis = "0.15.0"
chrono-tz = "0.10.0"
derive_more = { version = "1.0.0", features = ["display"] }
num-derive = "0.4.2"
num-traits = "0.2.19"

[dependencies.sea-orm]
version = "1.0.0-rc.5"
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    # "sqlx-mysql",
    # "sqlx-sqlite",
]

[features]
mock = ["sea-orm/mock"]

